- Refactored the enigma scripts.
- Added initial ork import.
- Initial import of the ork library.
- Rebuild ork minimal example and test on shuttle.
- Added support for ork examples compilation and test.
- Renamed ork samples folder.
- Ignoring ork log file.
- Added support for ork tests.
- Adding proland sources.
- Built proland core with working sample.
- Rebuilt proland core demo with proper sub path.
- Adding proland terrain plugin.
- Built terrain1 example.
- Added the terrain samples 2 to 5.
- Added proland atmo plugin support.
- Added ocean support in proland.
- Built forest, graph and river plugins for proland.
- Built all proland examples.
- Tested proland examples.
- Added glut minimal test. Fixed mouse wheel usage. minor refactoring of assert methods.
- Preparing TODO list support.
- Added minimal OSG test.
- Started compilation of plug_land with partial support for ork classes.
- Added lua bindings for ork/render folder.
- Added support for ork/resource folder.
- Added bindings for ork scenegraph and taskgraph folders.
- Added bindings for complete ork folder in plug_land.
- Added binding for proland core in lang plugin.
- Rebuilt land plug with proland core bindings.
- Added support for proland terrain bindings.
- Added support for proland atmo bindings.
- Added bindings for proland ocean and forest plugins.
- Added support for proland graph plugin bindings.
- Added support for proland river plugin bindings.
- Added support for proland edit plugin bindings.
- Rebuilt with complete prolant bindings.
- Refactoring code to add support for sgtLuna in ork and proland.
- Rebuilt removing most warnings in sources.
- Fixed crash issue on glGenBuffer due to static glew link in ork and land plugins.
- fixed binding for ork:vec4i and ork:vec4f proper usage.
- Trying to rebuild wx plugin.
- Rebuilt wx plug with swapbuffers support. built minimal ork sample with GL and OSG. Building minimal proland core sample with OSG.