@@ -90,3 +90,4 @@
 - fixed binding for ork:vec4i and ork:vec4f proper usage.
 - Trying to rebuild wx plugin.
 - Rebuilt wx plug with swapbuffers support. built minimal ork sample with GL and OSG. Building minimal proland core sample with OSG.
+- Added support for rotation and move in proland_core test app.
